# CPPPlayground

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  bitmap.cpp  boost_xpressive.cpp  css_px_unit.html  main.cpp  multi_index.cpp  optional.cpp  spirit.cpp  tokenizer.cpp  variant.cpp
actor/: CMakeLists.txt
actor/cmake/: FindCAF.cmake
boost/: CMakeLists.txt  aio_coroutines_echo_server.cc  aio_server.cc  aio_timer1.cc  asio_allocation_server.cc  asio_io_context.cc  boost_phoenix_create_custom_function.cc  boost_phoenix_simple.cc
boost/fiber/: CMakeLists.txt  fiber.cc
clang/: AST.cpp  AST.h  CMakeLists.txt  CXXABI.h  CppParser.cpp  CppParser.h  FindNamedClassAction.cpp  FindNamedClassAction.h  FindNamedClassConsumer.cpp  FindNamedClassConsumer.h  FindNamedClassVisitor.cpp  FindNamedClassVisitor.h  Parser.cpp  Parser.h  Target.cpp  Target.h  helper.h  main.cpp  simple.cpp
clang/include/: catch.h
cpp_language/: CMakeLists.txt  copy_initialization.cc  direct_initialization.cc  optional.cc  overload.cc  shared_ptr.cc  trivial_stdlayout_pod.cc  value_initialization.cc  value_metafunction.cc
cpp_language/5.7/: CMakeLists.txt  stack9.cc
cpp_language/6/: CMakeLists.txt  move1.cc  move2.cc  specialmemtmpl1.cc  specialmemtmpl2.cc
cpp_language/7/: CMakeLists.txt  outr.cc
cpp_language/ArgumentDependentLookup-KoenigLookup/: CMakeLists.txt  example_1.cc  example_2.cc  name_hiding.cc  name_hiding2.cc
cpp_language/CPP1114/: CMakeLists.txt  brace_initialization.cc  compiletime_counter.cc  forwarding.cc  universal_reference_pit.cc
cpp_language/CPP17/: CMakeLists.txt  add_template.cc  attribute.cc  compile_counter.cc  copy_elision_non_moveable.cc  custom_structured_binding.cc  demo_map.cc  demo_print.cc  fs_checkpath1.cc  fs_checkpath3.cc  fs_createfiles.cc  func_except_type.cc  integer_sequence.cc  jetbrain_quitz.cc  macro_expansion.cc  optional_simple.cc  tag_dispatch.cc  to_string.cc  variant_lifetime.cc  variant_monostate.cc  variant_poly1.cc  variant_simple.cc  variant_visit.cc  visit_multiple.cc
cpp_language/CPP20/: CMakeLists.txt  concepts.cc  coroutines_generator.cc  simple_coroutine.cc  suspend_always.cc
cpp_language/algorithm/: accumulatate.cc
cpp_language/functional/: CMakeLists.txt  bind.cc  error-test.cc  function.cc  lazy_val.cc  older-than-generic.cc  partial_function.cc  private_inheritance_is_base_of.cc  sum_type.cc  tenis.cc
cpp_language/stl/: CMakeLists.txt  boost_iterator_facade.cc  iterator.cc  iterator_tag.cc
cpp_template/: CMakeLists.txt  adl.cc  funcoverload1.cc  specialization.cc
curl/: CMakeLists.txt  easy1.cc
doctest_learn/: CMakeLists.txt  test_benchmark.cc  test_factorial.cc  test_gui.cc  test_lifecycle.cc
ffmpeg/: CMakeLists.txt  ffmpeg_hello_world.cc
folly/: CMakeLists.txt
folly/futures/: CMakeLists.txt  future_simple.cc  future_skynet.cc
freetype/: CMakeLists.txt  DrawWithQt.cc  harfbuzz_freetype_qt.cc
glib_gtk/: CMakeLists.txt  glib_example1.c  glib_gdata.cc  gobject_example1.cc  gobject_example2.cc  gobject_example3.cc  gobject_example4.c  gobject_example5.c  gtk1.c  gtk_lb4.c  gtk_lb4_cc.cc  gtk_tfe1.c  gtk_tfv1.c  gvalue.cc  ownership.cc  property.c  simple.cc
glib_gtk/abstract_type/: main.c  tdouble.c  tdouble.h
glib_gtk/derivable_non-abstract/: main.c  tint.c  tint.h  tnumber.c  tnumber.h  tnumstr.h  tstr.c  tstr.h
glib_gtk/tdouble6/: main.c  tdouble.c  tdouble.h
glib_gtk/tnumber/: main.c  tnumber.c  tnumber.h
gtk/: CMakeLists.txt
harfbuzz/: CMakeLists.txt  simple.cc  window.h
harfbuzz/glfw_freetype/: main.cc  (+4 more)
icu/: CMakeLists.txt  bidi.cc  bidirectional.html  break_iterator_utext_count_words.cc  codepoints_in_utf16.cc  composition_decomposition.cc  converter_getNames.cc  output_unicode_codepoint_one_by_one.cc  output_utf8_one_by_one.cc  utext_count_words.cc  utf16_to_utf8.cc  utf16_to_utf8_with_UnicodeString.cc  utf16_to_utf8_with_preflighting.cc  utf8_to_utf16.cc
imgui_play/: CMakeLists.txt  simple.cc
libtorrent/: CMakeLists.txt
libtxt/: CMakeLists.txt
llvm/: CMakeLists.txt
modern_gui_dracular_qt_widgets/: CMakeLists.txt  ExtraLeftMenuState.scxml  extraleftmenu.cpp  extraleftmenu.h  extraleftmenu.ui  main.cc  main_window.cc  main_window.h  mainwindow.ui  style_injector.py  title_right_info.cc  title_right_info.h
opengl/: 1_1_hello_window.cc  CMakeLists.txt  camera.h  glm_test.cc  hello_triangle.cc  hello_triangle_exercise2-3.cc  hello_triangle_indexed.cc  main.cpp  shader.h  shaders_interpolation.cc
opengl_shader/: CMakeLists.txt
qBittorrent/: CMakeLists.txt  main.cc
qt5/: .gitignore  CMakeLists.txt  QPainterPath.cc  QtWidgetsPlayground.pro  dpi_device_pixel_ration.cc  logical_and_physical_dpi.cc  meta_object.cc  objects_hierachy_on_stack.cc  property_animation.cc  qfile_memory_mapping.cc  text_edit.cc  text_multiple_script.cc
qt_command_line/: CMakeLists.txt
qt_with_rxcpp/: CMakeLists.txt  filter.cc  rx_eventfilter.h  simple.cc
range/: CMakeLists.txt  any_all_none_of.cc  common.h  extract_attribute_from_object.cc  extract_keys_from_map.cc  group_by.cc  hello_ranges.cc  hof.cc  input_extraction.cc  memory_address_of_elements.cc  seq_gen_yield.cc  sequence_generation.cc  simple_action.cc  stringstream_extract_integers.cc  view_join.cc
rust_with_cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
rxcpp/: AutoDispose.cc  Average.cc  BehaviorSubject.cc  CMakeLists.txt  CellPattern.cc  ColdObservable.cc  CompositeSubscription1.cc  Concactatenate.cc  Concat.cc  ConcatMap.cc  ConnectDispose.cc  CustomOperator1.cc  CustomOperator2.cc  CustomOperatorScheduler.cc  CustomScheduler.cc  DirReact.cc  Finally.cc  First.cc  Flatmap.cc  HotObservable.cc  IntervalPublish.cc  MapWithPipe.cc  Merge.cc  ObserveOn.cc  ObserverFromScratch.cc  OnError1.cc  OnError2.cc  OnError3.cc  OnError_ObserveOn1.cc  OnError_ObserveOn2.cc  OperatorLiftFirst.cc  OperatorLiftSecond.cc  OperatorSimple.cc  Range.cc  RefCount.cc  ReplayAll.cc  ResourceLoan.cc  Retry1.cc  Retry2.cc  RunLoop.cc  (+18 more)
rxcpp_imgui_twitter/: CMakeLists.txt  main.cc  model.h  rxcurl.h  rximgui.h  tweets.h  util.h
(+893 files in other folders)
