#
#add_subdirectory(5.7)
#add_subdirectory(6)
#add_subdirectory(7)
#add_subdirectory(functional)
#add_subdirectory(CPP17)
add_subdirectory(CPP20)
#add_subdirectory(algorithm)
#add_subdirectory(CPP1114)
set(PREFIX cpp_language)
add_single_file_targets(PREFIX ${PREFIX} DIR ${CMAKE_CURRENT_SOURCE_DIR} )
add_subdirectory(ArgumentDependentLookup-KoenigLookup)
