project(doctest_learn)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)
list(APPEND CMAKE_PREFIX_PATH ${QT_CMAKE})
find_package(doctest CONFIG REQUIRED)
find_package(QT NAMES Qt5 Qt6 COMPONENTS Core Widgets Test REQUIRED)
find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core Widgets Test  REQUIRED)

enable_testing(true)
set(PREFIX doctest_learn)
add_single_file_targets(PREFIX ${PREFIX} TEST DIR ${CMAKE_CURRENT_SOURCE_DIR} LIBS doctest::doctest Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::Test)