if (APPLE)
    find_package(PkgConfig)
    pkg_check_modules(avformat REQUIRED libavformat IMPORTED_TARGET)
    pkg_check_modules(avcodec REQUIRED libavcodec IMPORTED_TARGET)
    pkg_check_modules(avfilter REQUIRED libavfilter IMPORTED_TARGET)
    #    set(AVFORMAT PkgConfig::avformat)
    #    set(AVCODEC PkgConfig::avcodec)
    #    set(AVFILTER PkgConfig::avfilter)
    set(FFMPEG PkgConfig::avformat PkgConfig::avcodec PkgConfig::avfilter)
endif ()

if (MSVC)
    find_package(ffmpeg REQUIRED)
    #    find_package(avfilter CONFIG REQUIRED)
    #    find_package(avcodec CONFIG REQUIRED)
    set(FFMPEG ffmpeg)
    #    set(AVFORMAT avformat)
    #    set(AVFILTER avfilter)
    #    set(AVCODEC avcodec)
endif ()

list(APPEND CMAKE_PREFIX_PATH ${QT_CMAKE})
find_package(Qt5 REQUIRED Core Widgets Network Quick)
set(PREFIX ffmpeg)
add_single_file_targets(PREFIX ${PREFIX} DIR ${CMAKE_CURRENT_SOURCE_DIR} LIBS ${FFMPEG} Qt5::Core)
add_dir_target(PREFIX ${PREFIX} DIR ${CMAKE_CURRENT_SOURCE_DIR} LIBS ${FFMPEG} Qt5::Core)
