set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)

find_package(Qt5 5.14 REQUIRED Core Widgets Network Quick QuickControls2 Gui)
if (MSVC)
    find_package(glfw3 CONFIG REQUIRED)
    find_package(glad CONFIG REQUIRED)
    set(GLFW glfw)
    set(GLAD glad::glad)
endif ()
set(PREFIX opengl)
add_single_file_targets(PREFIX ${PREFIX} DIR ${CMAKE_CURRENT_SOURCE_DIR} LIBS ${GLFW} ${GLAD} Qt5::Core Qt5::Widgets Qt5::Gui Qt5::Quick)
add_dir_target(PREFIX ${PREFIX} DIR ${CMAKE_CURRENT_SOURCE_DIR} LIBS ${GLFW} ${GLAD} Qt5::Core Qt5::Widgets Qt5::Gui Qt5::Quick)
