set(CMAKE_CXX_STANDARD 17)
if (MSVC)
    add_compile_options("/Zc:__cplusplus" "/utf-8")
endif ()
find_package(range-v3 CONFIG REQUIRED)
find_package(fmt CONFIG REQUIRED)
set(PREFIX range)
add_single_file_targets(PREFIX ${PREFIX} DIR ${CMAKE_CURRENT_SOURCE_DIR} LIBS range-v3 range-v3-meta range-v3::meta range-v3-concepts fmt::fmt)
